semantico/y.output
Gramática

    0 $accept: programa $end

    1 programa: TOK_MAIN '{' declaraciones funciones sentencias '}'

    2 declaraciones: declaracion
    3              | declaracion declaraciones

    4 declaracion: clase identificadores ';'

    5 clase: clase_escalar
    6      | clase_vector

    7 clase_escalar: tipo

    8 tipo: TOK_INT
    9     | TOK_BOOLEAN

   10 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA ']'

   11 identificadores: identificador
   12                | identificador ',' identificadores

   13 funciones: funcion funciones
   14          | %empty

   15 funcion: TOK_FUNCTION tipo identificador '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

   16 parametros_funcion: parametro_funcion resto_parametros_funcion
   17                   | %empty

   18 resto_parametros_funcion: ';' parametro_funcion resto_parametros_funcion
   19                         | %empty

   20 parametro_funcion: tipo identificador

   21 declaraciones_funcion: declaraciones
   22                      | %empty

   23 sentencias: sentencia
   24           | sentencia sentencias

   25 sentencia: sentencia_simple ';'
   26          | bloque

   27 sentencia_simple: asignacion
   28                 | lectura
   29                 | escritura
   30                 | retorno_funcion

   31 bloque: condicional
   32       | bucle

   33 asignacion: identificador '=' exp
   34           | elemento_vector '=' exp

   35 elemento_vector: identificador '[' exp ']'

   36 condicional: TOK_IF '(' exp ')' '{' sentencias '}'
   37            | TOK_IF '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

   38 bucle: TOK_WHILE '(' exp ')' '{' sentencias '}'

   39 lectura: TOK_SCANF identificador

   40 escritura: TOK_PRINTF exp

   41 retorno_funcion: TOK_RETURN exp

   42 exp: exp '+' exp
   43    | exp '-' exp
   44    | exp '/' exp
   45    | exp '*' exp
   46    | '-' exp
   47    | exp TOK_AND exp
   48    | exp TOK_OR exp
   49    | '!' exp
   50    | identificador
   51    | constante
   52    | '(' exp ')'
   53    | '(' comparacion ')'
   54    | elemento_vector
   55    | identificador '(' lista_expresiones ')'

   56 lista_expresiones: exp resto_lista_expresiones
   57                  | %empty

   58 resto_lista_expresiones: ',' exp resto_lista_expresiones
   59                        | %empty

   60 comparacion: exp TOK_IGUAL exp
   61            | exp TOK_DISTINTO exp
   62            | exp TOK_MENORIGUAL exp
   63            | exp TOK_MAYORIGUAL exp
   64            | exp '<' exp
   65            | exp '>' exp

   66 constante: constante_logica
   67          | constante_entera

   68 constante_logica: TOK_TRUE
   69                 | TOK_FALSE

   70 constante_entera: TOK_CONSTANTE_ENTERA

   71 identificador: TOK_IDENTIFICADOR


Terminales con las reglas donde aparecen

$end (0) 0
'!' (33) 49
'(' (40) 15 36 37 38 52 53 55
')' (41) 15 36 37 38 52 53 55
'*' (42) 45
'+' (43) 42
',' (44) 12 58
'-' (45) 43 46
'/' (47) 44
';' (59) 4 18 25
'<' (60) 64
'=' (61) 33 34
'>' (62) 65
'[' (91) 10 35
']' (93) 10 35
'{' (123) 1 15 36 37 38
'}' (125) 1 15 36 37 38
error (256)
TOK_MAIN (258) 1
TOK_ARRAY (259) 10
TOK_INT (260) 8
TOK_BOOLEAN (261) 9
TOK_FUNCTION (262) 15
TOK_IF (263) 36 37
TOK_ELSE (264) 37
TOK_WHILE (265) 38
TOK_TRUE (266) 68
TOK_FALSE (267) 69
TOK_SCANF (268) 39
TOK_PRINTF (269) 40
TOK_RETURN (270) 41
TOK_AND (271) 47
TOK_OR (272) 48
TOK_IGUAL (273) 60
TOK_DISTINTO (274) 61
TOK_MENORIGUAL (275) 62
TOK_MAYORIGUAL (276) 63
TOK_IDENTIFICADOR (277) 71
TOK_CONSTANTE_ENTERA (278) 10 70
MENOSU (279)


No terminales con las reglas donde aparecen

$accept (41)
    en la izquierda: 0
programa (42)
    en la izquierda: 1, en la derecha: 0
declaraciones (43)
    en la izquierda: 2 3, en la derecha: 1 3 21
declaracion (44)
    en la izquierda: 4, en la derecha: 2 3
clase (45)
    en la izquierda: 5 6, en la derecha: 4
clase_escalar (46)
    en la izquierda: 7, en la derecha: 5
tipo (47)
    en la izquierda: 8 9, en la derecha: 7 10 15 20
clase_vector (48)
    en la izquierda: 10, en la derecha: 6
identificadores (49)
    en la izquierda: 11 12, en la derecha: 4 12
funciones (50)
    en la izquierda: 13 14, en la derecha: 1 13
funcion (51)
    en la izquierda: 15, en la derecha: 13
parametros_funcion (52)
    en la izquierda: 16 17, en la derecha: 15
resto_parametros_funcion (53)
    en la izquierda: 18 19, en la derecha: 16 18
parametro_funcion (54)
    en la izquierda: 20, en la derecha: 16 18
declaraciones_funcion (55)
    en la izquierda: 21 22, en la derecha: 15
sentencias (56)
    en la izquierda: 23 24, en la derecha: 1 15 24 36 37 38
sentencia (57)
    en la izquierda: 25 26, en la derecha: 23 24
sentencia_simple (58)
    en la izquierda: 27 28 29 30, en la derecha: 25
bloque (59)
    en la izquierda: 31 32, en la derecha: 26
asignacion (60)
    en la izquierda: 33 34, en la derecha: 27
elemento_vector (61)
    en la izquierda: 35, en la derecha: 34 54
condicional (62)
    en la izquierda: 36 37, en la derecha: 31
bucle (63)
    en la izquierda: 38, en la derecha: 32
lectura (64)
    en la izquierda: 39, en la derecha: 28
escritura (65)
    en la izquierda: 40, en la derecha: 29
retorno_funcion (66)
    en la izquierda: 41, en la derecha: 30
exp (67)
    en la izquierda: 42 43 44 45 46 47 48 49 50 51 52 53 54 55, en la derecha:
    33 34 35 36 37 38 40 41 42 43 44 45 46 47 48 49 52 56 58 60 61
    62 63 64 65
lista_expresiones (68)
    en la izquierda: 56 57, en la derecha: 55
resto_lista_expresiones (69)
    en la izquierda: 58 59, en la derecha: 56 58
comparacion (70)
    en la izquierda: 60 61 62 63 64 65, en la derecha: 53
constante (71)
    en la izquierda: 66 67, en la derecha: 51
constante_logica (72)
    en la izquierda: 68 69, en la derecha: 66
constante_entera (73)
    en la izquierda: 70, en la derecha: 67
identificador (74)
    en la izquierda: 71, en la derecha: 11 12 15 20 33 35 39 50 55


Estado 0

    0 $accept: . programa $end

    TOK_MAIN  desplazar e ir al estado 1

    programa  ir al estado 2


Estado 1

    1 programa: TOK_MAIN . '{' declaraciones funciones sentencias '}'

    '{'  desplazar e ir al estado 3


Estado 2

    0 $accept: programa . $end

    $end  desplazar e ir al estado 4


Estado 3

    1 programa: TOK_MAIN '{' . declaraciones funciones sentencias '}'

    TOK_ARRAY    desplazar e ir al estado 5
    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    declaraciones  ir al estado 8
    declaracion    ir al estado 9
    clase          ir al estado 10
    clase_escalar  ir al estado 11
    tipo           ir al estado 12
    clase_vector   ir al estado 13


Estado 4

    0 $accept: programa $end .

    $default  aceptar


Estado 5

   10 clase_vector: TOK_ARRAY . tipo '[' TOK_CONSTANTE_ENTERA ']'

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    tipo  ir al estado 14


Estado 6

    8 tipo: TOK_INT .

    $default  reduce usando la regla 8 (tipo)


Estado 7

    9 tipo: TOK_BOOLEAN .

    $default  reduce usando la regla 9 (tipo)


Estado 8

    1 programa: TOK_MAIN '{' declaraciones . funciones sentencias '}'

    TOK_FUNCTION  desplazar e ir al estado 15

    $default  reduce usando la regla 14 (funciones)

    funciones  ir al estado 16
    funcion    ir al estado 17


Estado 9

    2 declaraciones: declaracion .
    3              | declaracion . declaraciones

    TOK_ARRAY    desplazar e ir al estado 5
    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    $default  reduce usando la regla 2 (declaraciones)

    declaraciones  ir al estado 18
    declaracion    ir al estado 9
    clase          ir al estado 10
    clase_escalar  ir al estado 11
    tipo           ir al estado 12
    clase_vector   ir al estado 13


Estado 10

    4 declaracion: clase . identificadores ';'

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificadores  ir al estado 20
    identificador    ir al estado 21


Estado 11

    5 clase: clase_escalar .

    $default  reduce usando la regla 5 (clase)


Estado 12

    7 clase_escalar: tipo .

    $default  reduce usando la regla 7 (clase_escalar)


Estado 13

    6 clase: clase_vector .

    $default  reduce usando la regla 6 (clase)


Estado 14

   10 clase_vector: TOK_ARRAY tipo . '[' TOK_CONSTANTE_ENTERA ']'

    '['  desplazar e ir al estado 22


Estado 15

   15 funcion: TOK_FUNCTION . tipo identificador '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    tipo  ir al estado 23


Estado 16

    1 programa: TOK_MAIN '{' declaraciones funciones . sentencias '}'

    TOK_IF             desplazar e ir al estado 24
    TOK_WHILE          desplazar e ir al estado 25
    TOK_SCANF          desplazar e ir al estado 26
    TOK_PRINTF         desplazar e ir al estado 27
    TOK_RETURN         desplazar e ir al estado 28
    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    sentencias        ir al estado 29
    sentencia         ir al estado 30
    sentencia_simple  ir al estado 31
    bloque            ir al estado 32
    asignacion        ir al estado 33
    elemento_vector   ir al estado 34
    condicional       ir al estado 35
    bucle             ir al estado 36
    lectura           ir al estado 37
    escritura         ir al estado 38
    retorno_funcion   ir al estado 39
    identificador     ir al estado 40


Estado 17

   13 funciones: funcion . funciones

    TOK_FUNCTION  desplazar e ir al estado 15

    $default  reduce usando la regla 14 (funciones)

    funciones  ir al estado 41
    funcion    ir al estado 17


Estado 18

    3 declaraciones: declaracion declaraciones .

    $default  reduce usando la regla 3 (declaraciones)


Estado 19

   71 identificador: TOK_IDENTIFICADOR .

    $default  reduce usando la regla 71 (identificador)


Estado 20

    4 declaracion: clase identificadores . ';'

    ';'  desplazar e ir al estado 42


Estado 21

   11 identificadores: identificador .
   12                | identificador . ',' identificadores

    ','  desplazar e ir al estado 43

    $default  reduce usando la regla 11 (identificadores)


Estado 22

   10 clase_vector: TOK_ARRAY tipo '[' . TOK_CONSTANTE_ENTERA ']'

    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 44


Estado 23

   15 funcion: TOK_FUNCTION tipo . identificador '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificador  ir al estado 45


Estado 24

   36 condicional: TOK_IF . '(' exp ')' '{' sentencias '}'
   37            | TOK_IF . '(' exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    '('  desplazar e ir al estado 46


Estado 25

   38 bucle: TOK_WHILE . '(' exp ')' '{' sentencias '}'

    '('  desplazar e ir al estado 47


Estado 26

   39 lectura: TOK_SCANF . identificador

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificador  ir al estado 48


Estado 27

   40 escritura: TOK_PRINTF . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 56
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 28

   41 retorno_funcion: TOK_RETURN . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 61
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 29

    1 programa: TOK_MAIN '{' declaraciones funciones sentencias . '}'

    '}'  desplazar e ir al estado 62


Estado 30

   23 sentencias: sentencia .
   24           | sentencia . sentencias

    TOK_IF             desplazar e ir al estado 24
    TOK_WHILE          desplazar e ir al estado 25
    TOK_SCANF          desplazar e ir al estado 26
    TOK_PRINTF         desplazar e ir al estado 27
    TOK_RETURN         desplazar e ir al estado 28
    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    $default  reduce usando la regla 23 (sentencias)

    sentencias        ir al estado 63
    sentencia         ir al estado 30
    sentencia_simple  ir al estado 31
    bloque            ir al estado 32
    asignacion        ir al estado 33
    elemento_vector   ir al estado 34
    condicional       ir al estado 35
    bucle             ir al estado 36
    lectura           ir al estado 37
    escritura         ir al estado 38
    retorno_funcion   ir al estado 39
    identificador     ir al estado 40


Estado 31

   25 sentencia: sentencia_simple . ';'

    ';'  desplazar e ir al estado 64


Estado 32

   26 sentencia: bloque .

    $default  reduce usando la regla 26 (sentencia)


Estado 33

   27 sentencia_simple: asignacion .

    $default  reduce usando la regla 27 (sentencia_simple)


Estado 34

   34 asignacion: elemento_vector . '=' exp

    '='  desplazar e ir al estado 65


Estado 35

   31 bloque: condicional .

    $default  reduce usando la regla 31 (bloque)


Estado 36

   32 bloque: bucle .

    $default  reduce usando la regla 32 (bloque)


Estado 37

   28 sentencia_simple: lectura .

    $default  reduce usando la regla 28 (sentencia_simple)


Estado 38

   29 sentencia_simple: escritura .

    $default  reduce usando la regla 29 (sentencia_simple)


Estado 39

   30 sentencia_simple: retorno_funcion .

    $default  reduce usando la regla 30 (sentencia_simple)


Estado 40

   33 asignacion: identificador . '=' exp
   35 elemento_vector: identificador . '[' exp ']'

    '['  desplazar e ir al estado 66
    '='  desplazar e ir al estado 67


Estado 41

   13 funciones: funcion funciones .

    $default  reduce usando la regla 13 (funciones)


Estado 42

    4 declaracion: clase identificadores ';' .

    $default  reduce usando la regla 4 (declaracion)


Estado 43

   12 identificadores: identificador ',' . identificadores

    TOK_IDENTIFICADOR  desplazar e ir al estado 19

    identificadores  ir al estado 68
    identificador    ir al estado 21


Estado 44

   10 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA . ']'

    ']'  desplazar e ir al estado 69


Estado 45

   15 funcion: TOK_FUNCTION tipo identificador . '(' parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    '('  desplazar e ir al estado 70


Estado 46

   36 condicional: TOK_IF '(' . exp ')' '{' sentencias '}'
   37            | TOK_IF '(' . exp ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 71
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 47

   38 bucle: TOK_WHILE '(' . exp ')' '{' sentencias '}'

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 72
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 48

   39 lectura: TOK_SCANF identificador .

    $default  reduce usando la regla 39 (lectura)


Estado 49

   68 constante_logica: TOK_TRUE .

    $default  reduce usando la regla 68 (constante_logica)


Estado 50

   69 constante_logica: TOK_FALSE .

    $default  reduce usando la regla 69 (constante_logica)


Estado 51

   70 constante_entera: TOK_CONSTANTE_ENTERA .

    $default  reduce usando la regla 70 (constante_entera)


Estado 52

   49 exp: '!' . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 73
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 53

   46 exp: '-' . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 74
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 54

   52 exp: '(' . exp ')'
   53    | '(' . comparacion ')'

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 75
    comparacion       ir al estado 76
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 55

   54 exp: elemento_vector .

    $default  reduce usando la regla 54 (exp)


Estado 56

   40 escritura: TOK_PRINTF exp .
   42 exp: exp . '+' exp
   43    | exp . '-' exp
   44    | exp . '/' exp
   45    | exp . '*' exp
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp

    TOK_AND  desplazar e ir al estado 77
    TOK_OR   desplazar e ir al estado 78
    '+'      desplazar e ir al estado 79
    '-'      desplazar e ir al estado 80
    '*'      desplazar e ir al estado 81
    '/'      desplazar e ir al estado 82

    $default  reduce usando la regla 40 (escritura)


Estado 57

   51 exp: constante .

    $default  reduce usando la regla 51 (exp)


Estado 58

   66 constante: constante_logica .

    $default  reduce usando la regla 66 (constante)


Estado 59

   67 constante: constante_entera .

    $default  reduce usando la regla 67 (constante)


Estado 60

   35 elemento_vector: identificador . '[' exp ']'
   50 exp: identificador .
   55    | identificador . '(' lista_expresiones ')'

    '['  desplazar e ir al estado 66
    '('  desplazar e ir al estado 83

    $default  reduce usando la regla 50 (exp)


Estado 61

   41 retorno_funcion: TOK_RETURN exp .
   42 exp: exp . '+' exp
   43    | exp . '-' exp
   44    | exp . '/' exp
   45    | exp . '*' exp
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp

    TOK_AND  desplazar e ir al estado 77
    TOK_OR   desplazar e ir al estado 78
    '+'      desplazar e ir al estado 79
    '-'      desplazar e ir al estado 80
    '*'      desplazar e ir al estado 81
    '/'      desplazar e ir al estado 82

    $default  reduce usando la regla 41 (retorno_funcion)


Estado 62

    1 programa: TOK_MAIN '{' declaraciones funciones sentencias '}' .

    $default  reduce usando la regla 1 (programa)


Estado 63

   24 sentencias: sentencia sentencias .

    $default  reduce usando la regla 24 (sentencias)


Estado 64

   25 sentencia: sentencia_simple ';' .

    $default  reduce usando la regla 25 (sentencia)


Estado 65

   34 asignacion: elemento_vector '=' . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 84
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 66

   35 elemento_vector: identificador '[' . exp ']'

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 85
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 67

   33 asignacion: identificador '=' . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 86
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 68

   12 identificadores: identificador ',' identificadores .

    $default  reduce usando la regla 12 (identificadores)


Estado 69

   10 clase_vector: TOK_ARRAY tipo '[' TOK_CONSTANTE_ENTERA ']' .

    $default  reduce usando la regla 10 (clase_vector)


Estado 70

   15 funcion: TOK_FUNCTION tipo identificador '(' . parametros_funcion ')' '{' declaraciones_funcion sentencias '}'

    TOK_INT      desplazar e ir al estado 6
    TOK_BOOLEAN  desplazar e ir al estado 7

    $default  reduce usando la regla 17 (parametros_funcion)

    tipo                ir al estado 87
    parametros_funcion  ir al estado 88
    parametro_funcion   ir al estado 89


Estado 71

   36 condicional: TOK_IF '(' exp . ')' '{' sentencias '}'
   37            | TOK_IF '(' exp . ')' '{' sentencias '}' TOK_ELSE '{' sentencias '}'
   42 exp: exp . '+' exp
   43    | exp . '-' exp
   44    | exp . '/' exp
   45    | exp . '*' exp
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp

    TOK_AND  desplazar e ir al estado 77
    TOK_OR   desplazar e ir al estado 78
    '+'      desplazar e ir al estado 79
    '-'      desplazar e ir al estado 80
    '*'      desplazar e ir al estado 81
    '/'      desplazar e ir al estado 82
    ')'      desplazar e ir al estado 90


Estado 72

   38 bucle: TOK_WHILE '(' exp . ')' '{' sentencias '}'
   42 exp: exp . '+' exp
   43    | exp . '-' exp
   44    | exp . '/' exp
   45    | exp . '*' exp
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp

    TOK_AND  desplazar e ir al estado 77
    TOK_OR   desplazar e ir al estado 78
    '+'      desplazar e ir al estado 79
    '-'      desplazar e ir al estado 80
    '*'      desplazar e ir al estado 81
    '/'      desplazar e ir al estado 82
    ')'      desplazar e ir al estado 91


Estado 73

   42 exp: exp . '+' exp
   43    | exp . '-' exp
   44    | exp . '/' exp
   45    | exp . '*' exp
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp
   49    | '!' exp .

    '+'  desplazar e ir al estado 79
    '-'  desplazar e ir al estado 80
    '*'  desplazar e ir al estado 81
    '/'  desplazar e ir al estado 82

    $default  reduce usando la regla 49 (exp)


Estado 74

   42 exp: exp . '+' exp
   43    | exp . '-' exp
   44    | exp . '/' exp
   45    | exp . '*' exp
   46    | '-' exp .
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp

    $default  reduce usando la regla 46 (exp)


Estado 75

   42 exp: exp . '+' exp
   43    | exp . '-' exp
   44    | exp . '/' exp
   45    | exp . '*' exp
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp
   52    | '(' exp . ')'
   60 comparacion: exp . TOK_IGUAL exp
   61            | exp . TOK_DISTINTO exp
   62            | exp . TOK_MENORIGUAL exp
   63            | exp . TOK_MAYORIGUAL exp
   64            | exp . '<' exp
   65            | exp . '>' exp

    TOK_AND         desplazar e ir al estado 77
    TOK_OR          desplazar e ir al estado 78
    TOK_IGUAL       desplazar e ir al estado 92
    TOK_DISTINTO    desplazar e ir al estado 93
    TOK_MENORIGUAL  desplazar e ir al estado 94
    TOK_MAYORIGUAL  desplazar e ir al estado 95
    '<'             desplazar e ir al estado 96
    '>'             desplazar e ir al estado 97
    '+'             desplazar e ir al estado 79
    '-'             desplazar e ir al estado 80
    '*'             desplazar e ir al estado 81
    '/'             desplazar e ir al estado 82
    ')'             desplazar e ir al estado 98


Estado 76

   53 exp: '(' comparacion . ')'

    ')'  desplazar e ir al estado 99


Estado 77

   47 exp: exp TOK_AND . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 100
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 78

   48 exp: exp TOK_OR . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 101
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 79

   42 exp: exp '+' . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 102
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 80

   43 exp: exp '-' . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 103
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 81

   45 exp: exp '*' . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 104
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 82

   44 exp: exp '/' . exp

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    elemento_vector   ir al estado 55
    exp               ir al estado 105
    constante         ir al estado 57
    constante_logica  ir al estado 58
    constante_entera  ir al estado 59
    identificador     ir al estado 60


Estado 83

   55 exp: identificador '(' . lista_expresiones ')'

    TOK_TRUE              desplazar e ir al estado 49
    TOK_FALSE             desplazar e ir al estado 50
    TOK_IDENTIFICADOR     desplazar e ir al estado 19
    TOK_CONSTANTE_ENTERA  desplazar e ir al estado 51
    '!'                   desplazar e ir al estado 52
    '-'                   desplazar e ir al estado 53
    '('                   desplazar e ir al estado 54

    $default  reduce usando la regla 57 (lista_expresiones)

    elemento_vector    ir al estado 55
    exp                ir al estado 106
    lista_expresiones  ir al estado 107
    constante          ir al estado 57
    constante_logica   ir al estado 58
    constante_entera   ir al estado 59
    identificador      ir al estado 60


Estado 84

   34 asignacion: elemento_vector '=' exp .
   42 exp: exp . '+' exp
   43    | exp . '-' exp
   44    | exp . '/' exp
   45    | exp . '*' exp
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp

    TOK_AND  desplazar e ir al estado 77
    TOK_OR   desplazar e ir al estado 78
    '+'      desplazar e ir al estado 79
    '-'      desplazar e ir al estado 80
    '*'      desplazar e ir al estado 81
    '/'      desplazar e ir al estado 82

    $default  reduce usando la regla 34 (asignacion)


Estado 85

   35 elemento_vector: identificador '[' exp . ']'
   42 exp: exp . '+' exp
   43    | exp . '-' exp
   44    | exp . '/' exp
   45    | exp . '*' exp
   47    | exp . TOK_AND exp
   48    | exp . TOK_OR exp

    TOK_AND  desplazar e ir al estado 77
    TOK_OR   desplazar e ir al estado 78
    '+'      desplazar e ir al estado 79
    '-'      desplazar e ir al estado 80
    '*'      desplazar e ir al estado 81
    '/'      desplazar e ir al estado 82
    ']'      desplazar e ir al estado 108


Estado 86
